--- a/Tarea_1_BD_2023_1.ipynb
+++ b/Tarea_1_BD_2023_1.ipynb
@@ -10,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,9 +37,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipython-sql in c:\\python310\\lib\\site-packages (0.5.0)\n",
+      "Requirement already satisfied: ipython in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython-sql) (8.12.0)\n",
+      "Requirement already satisfied: sqlparse in c:\\python310\\lib\\site-packages (from ipython-sql) (0.4.3)\n",
+      "Requirement already satisfied: ipython-genutils in c:\\python310\\lib\\site-packages (from ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: prettytable in c:\\python310\\lib\\site-packages (from ipython-sql) (3.6.0)\n",
+      "Requirement already satisfied: six in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython-sql) (1.16.0)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0 in c:\\python310\\lib\\site-packages (from ipython-sql) (2.0.8)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\python310\\lib\\site-packages (from sqlalchemy>=2.0->ipython-sql) (2.0.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in c:\\python310\\lib\\site-packages (from sqlalchemy>=2.0->ipython-sql) (4.5.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.18.2)\n",
+      "Requirement already satisfied: backcall in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (2.14.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.7.5)\n",
+      "Requirement already satisfied: colorama in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.4.6)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (3.0.38)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.6.2)\n",
+      "Requirement already satisfied: traitlets>=5 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (5.9.0)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from ipython->ipython-sql) (0.1.6)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from prettytable->ipython-sql) (0.2.6)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from jedi>=0.16->ipython->ipython-sql) (0.8.3)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from stack-data->ipython->ipython-sql) (1.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\bpaul\\appdata\\roaming\\python\\python310\\site-packages (from stack-data->ipython->ipython-sql) (2.2.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.2.2 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: psycopg2 in c:\\python310\\lib\\site-packages (2.9.5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.2.2 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: names in c:\\python310\\lib\\site-packages (0.3.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.2.2 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "! pip3 install ipython-sql\n",
     "! pip3 install psycopg2\n",
@@ -59,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: DATABASE_URL=postgresql://postgres:benjamin11@localhost:5432/tarea-bd\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext sql\n",
-    "%env DATABASE_URL=postgresql://postgres:password@localhost:5432/dbname"
+    "%env DATABASE_URL=postgresql://postgres:benjamin11@localhost:5432/tarea-bd"
    ]
   },
   {
@@ -104,16 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<connection object at 0x0000017092FCBDE0; dsn: 'user=postgres password=xxx dbname=tarea-bd host=localhost', closed: 0>\n"
+     ]
+    }
+   ],
    "source": [
     "#Recuerde cambiar los valores de USER, DBNAME y PASSWORD por los mismos de la celda superior.\n",
     "connection = psycopg2.connect(\n",
     "   host=\"localhost\",\n",
     "   user=\"postgres\",\n",
-    "   dbname='dbname',\n",
-    "   password=\"password\"\n",
+    "   dbname='tarea-bd',\n",
+    "   password=\"benjamin11\"\n",
     ")\n",
     "\n",
     "print(connection)\n",
@@ -121,7 +207,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +216,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,15 +224,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "CREATE TABLE facciones(\n",
+    "\n",
+    "    id INTEGER GENERATED ALWAYS AS IDENTITY,\n",
+    "\n",
+    "    nombre VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    descripcion VARCHAR(45) NOT NULL,\n",
+    "    \n",
+    "    PRIMARY KEY (id)\n",
+    "\n",
+    ");\n",
+    "    "
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,15 +271,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "CREATE TABLE trabajos(\n",
+    "    \n",
+    "    id INTEGER GENERATED ALWAYS AS IDENTITY,\n",
+    "    \n",
+    "    nombre VARCHAR(45) NOT NULL,\n",
+    "    \n",
+    "    descripcion VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    sueldo INTEGER NOT NULL,\n",
+    "    \n",
+    "    PRIMARY KEY (id)\n",
+    "\n",
+    ");\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,15 +319,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "CREATE TABLE personas(\n",
+    "\n",
+    "    id INTEGER GENERATED ALWAYS AS IDENTITY,\n",
+    "\n",
+    "    nombre VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    apellidos VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    fecha_nacimiento DATE NOT NULL,\n",
+    "\n",
+    "    infectado BOOLEAN NOT NULL,\n",
+    "\n",
+    "    conyugue INTEGER,\n",
+    "\n",
+    "    PRIMARY KEY (id) ,\n",
+    "    \n",
+    "    FOREIGN KEY (conyugue) REFERENCES personas\n",
+    ");\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,17 +372,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE cuentas_bancarias (\n",
+    "\n",
+    "    id INTEGER GENERATED ALWAYS AS IDENTITY,\n",
+    "\n",
+    "    tipo_de_cuenta VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    banco VARCHAR(45) NOT NULL,\n",
+    "\n",
+    "    saldo INTEGER NOT NULL,\n",
+    "\n",
+    "    PRIMARY KEY (id),\n",
+    "\n",
+    "    id_persona INTEGER, \n",
+    "\n",
+    "    FOREIGN KEY(id_persona) REFERENCES personas(id)\n",
+    "\n",
+    ");"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,15 +427,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "(psycopg2.errors.DuplicateTable) la relación «persona_pertenece_faccion» ya existe\n",
+      "\n",
+      "[SQL: CREATE TABLE persona_pertenece_faccion(\n",
+      "\n",
+      "    id_persona INTEGER,\n",
+      "\n",
+      "    id_faccion INTEGER,\n",
+      "\n",
+      "    PRIMARY KEY (id_persona, id_faccion),\n",
+      "\n",
+      "    FOREIGN KEY (id_persona) REFERENCES personas (id),\n",
+      "\n",
+      "    FOREIGN KEY (id_faccion) REFERENCES facciones (id)\n",
+      "    \n",
+      "\n",
+      ");]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+     ]
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "CREATE TABLE persona_pertenece_faccion(\n",
+    "\n",
+    "    id_persona INTEGER,\n",
+    "\n",
+    "    id_faccion INTEGER,\n",
+    "\n",
+    "    PRIMARY KEY (id_persona, id_faccion),\n",
+    "\n",
+    "    FOREIGN KEY (id_persona) REFERENCES personas (id),\n",
+    "\n",
+    "    FOREIGN KEY (id_faccion) REFERENCES facciones (id)\n",
+    "    \n",
+    "\n",
+    ");"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,13 +482,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://postgres:***@localhost:5432/tarea-bd\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "CREATE TABLE persona_tiene_trabajo (\n",
+    " \n",
+    " id_persona INTEGER,\n",
+    "\n",
+    " id_trabajo INTEGER,\n",
+    " \n",
+    " estado BOOLEAN NOT NULL,\n",
+    "\n",
+    " ultima_vez_realizado TIMESTAMP NOT NULL,   \n",
+    " \n",
+    " FOREIGN KEY (id_persona) REFERENCES personas (id),\n",
+    " \n",
+    " FOREIGN KEY (id_trabajo) REFERENCES trabajos (id),\n",
+    " \n",
+    " PRIMARY KEY (id_persona , id_trabajo)\n",
+    "\n",
+    ");\n"
    ]
   },
   {
@@ -249,9 +540,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Borrando Datos Antiguos...\n",
+      "Generando Datos...\n"
+     ]
+    },
+    {
+     "ename": "ForeignKeyViolation",
+     "evalue": "inserción o actualización en la tabla «persona_pertenece_faccion» viola la llave foránea «persona_pertenece_faccion_id_persona_fkey»\nDETAIL:  La llave (id_persona)=(733) no está presente en la tabla «facciones».\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mForeignKeyViolation\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 129\u001b[0m\n\u001b[0;32m    126\u001b[0m     cursor\u001b[39m.\u001b[39mexecute(inserts[\u001b[39m3\u001b[39m], cb)\n\u001b[0;32m    128\u001b[0m \u001b[39mfor\u001b[39;00m ppf \u001b[39min\u001b[39;00m persona_pertenece_faccion:\n\u001b[1;32m--> 129\u001b[0m     cursor\u001b[39m.\u001b[39;49mexecute(inserts[\u001b[39m4\u001b[39;49m], ppf)\n\u001b[0;32m    131\u001b[0m \u001b[39mfor\u001b[39;00m ptt \u001b[39min\u001b[39;00m persona_tiene_trabajo:\n\u001b[0;32m    132\u001b[0m     cursor\u001b[39m.\u001b[39mexecute(inserts[\u001b[39m5\u001b[39m], ptt)\n",
+      "\u001b[1;31mForeignKeyViolation\u001b[0m: inserción o actualización en la tabla «persona_pertenece_faccion» viola la llave foránea «persona_pertenece_faccion_id_persona_fkey»\nDETAIL:  La llave (id_persona)=(733) no está presente en la tabla «facciones».\n"
+     ]
+    }
+   ],
    "source": [
     "#Recuerde haber ejecutado todas las celdas anteriores!\n",
     "\n",
@@ -411,7 +722,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -423,7 +733,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -458,7 +767,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,7 +800,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -526,7 +833,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -562,7 +868,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -598,7 +903,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -634,7 +938,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -671,7 +974,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -710,7 +1012,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -746,7 +1047,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -782,7 +1082,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -836,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
