--- a/Tarea_1_BD_2023_1.ipynb
+++ b/Tarea_1_BD_2023_1.ipynb
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1117,78 +1117,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@localhost:5432/tareabase\n",
-      "6 rows affected.\n"
+      "UsageError: Cell magic `%%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>facción</th>\n",
-       "            <th>descripcion</th>\n",
-       "            <th>rn</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Luciérnagas</td>\n",
-       "            <td>Encargado de construir</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>MaCdonia</td>\n",
-       "            <td>Encargado de limpiar las calles</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Carroñeros</td>\n",
-       "            <td>Encargado de reparar las cerraduras</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>JavaScriptia</td>\n",
-       "            <td>Encargado de cobrar los impuestos</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>FEDRA</td>\n",
-       "            <td>Encargado de cobrar los impuestos</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Pythonia</td>\n",
-       "            <td>Encargado de explorar la ciudad</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Luciérnagas', 'Encargado de construir', 1),\n",
-       " ('MaCdonia', 'Encargado de limpiar las calles', 1),\n",
-       " ('Carroñeros', 'Encargado de reparar las cerraduras', 1),\n",
-       " ('JavaScriptia', 'Encargado de cobrar los impuestos', 1),\n",
-       " ('FEDRA', 'Encargado de cobrar los impuestos', 1),\n",
-       " ('Pythonia', 'Encargado de explorar la ciudad', 1)]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
-    "\n",
-    "SELECT\n",
-    "    facciones.nombre AS Facción  ,trabajos.descripcion ,\n",
+    "SELECT Facción  ,trabajo\n",
+    "FROM\n",
+    "(SELECT\n",
+    "    facciones.nombre AS Facción  ,trabajos.descripcion AS trabajo ,\n",
     "    row_number() over (partition by facciones.nombre order by COUNT(persona_tiene_trabajo.id_trabajo) DESC) rn\n",
     "FROM \n",
     "    facciones\n",
@@ -1214,11 +1155,9 @@
     "\n",
     "WHERE persona_tiene_trabajo.estado=true\n",
     "\n",
-    "GROUP BY facciones.id ,  trabajos.descripcion\n",
+    "GROUP BY facciones.id ,  trabajos.descripcion)tabla\n",
     "\n",
-    "ORDER BY rn ASC\n",
-    "\n",
-    "LIMIT 6;\n"
+    "WHERE rn=1\n"
    ]
   },
   {
@@ -1242,67 +1181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@localhost:5432/tareabase\n",
-      "6 rows affected.\n"
+      "UsageError: Cell magic `%%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>facción</th>\n",
-       "            <th>saldo</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>JavaScriptia</td>\n",
-       "            <td>35598</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Luciérnagas</td>\n",
-       "            <td>10164</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Pythonia</td>\n",
-       "            <td>24514</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>MaCdonia</td>\n",
-       "            <td>16113</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>FEDRA</td>\n",
-       "            <td>33932</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Carroñeros</td>\n",
-       "            <td>25540</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('JavaScriptia', 35598),\n",
-       " ('Luciérnagas', 10164),\n",
-       " ('Pythonia', 24514),\n",
-       " ('MaCdonia', 16113),\n",
-       " ('FEDRA', 33932),\n",
-       " ('Carroñeros', 25540)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1314,9 +1201,14 @@
     "FROM \n",
     "    facciones\n",
     "\n",
-    "LEFT JOIN persona_pertenece_faccion ON facciones.id = persona_pertenece_faccion.id_faccion\n",
+    "LEFT JOIN \n",
+    "    persona_pertenece_faccion\n",
+    "ON \n",
+    "    facciones.id = persona_pertenece_faccion.id_faccion\n",
     "\n",
-    "LEFT JOIN personas ON persona_pertenece_faccion.id_persona = personas.id\n",
+    "LEFT JOIN\n",
+    "    personas\n",
+    "ON persona_pertenece_faccion.id_persona = personas.id\n",
     "\n",
     "LEFT JOIN cuentas_bancarias ON personas.id = cuentas_bancarias.id_persona\n",
     "\n",
@@ -1346,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1354,94 +1246,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@localhost:5432/tareabase\n",
-      "10 rows affected.\n"
+      "UsageError: Cell magic `%%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>banco</th>\n",
-       "            <th>cantidad</th>\n",
-       "            <th>saldo</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Banco BBVA</td>\n",
-       "            <td>13</td>\n",
-       "            <td>74891</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco BCI SpA</td>\n",
-       "            <td>9</td>\n",
-       "            <td>45451</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Consorcio S.A</td>\n",
-       "            <td>11</td>\n",
-       "            <td>49998</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco de la Nación S.A</td>\n",
-       "            <td>6</td>\n",
-       "            <td>22568</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Estado SpA</td>\n",
-       "            <td>11</td>\n",
-       "            <td>55673</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Pedrito Pascal SpA</td>\n",
-       "            <td>12</td>\n",
-       "            <td>53732</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Pythonia S.A</td>\n",
-       "            <td>5</td>\n",
-       "            <td>28926</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Santander SpA</td>\n",
-       "            <td>19</td>\n",
-       "            <td>93974</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Banco Scotiabank</td>\n",
-       "            <td>19</td>\n",
-       "            <td>101278</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>FedraBank S.A</td>\n",
-       "            <td>13</td>\n",
-       "            <td>80622</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Banco BBVA', 13, 74891),\n",
-       " ('Banco BCI SpA', 9, 45451),\n",
-       " ('Banco Consorcio S.A', 11, 49998),\n",
-       " ('Banco de la Nación S.A', 6, 22568),\n",
-       " ('Banco Estado SpA', 11, 55673),\n",
-       " ('Banco Pedrito Pascal SpA', 12, 53732),\n",
-       " ('Banco Pythonia S.A', 5, 28926),\n",
-       " ('Banco Santander SpA', 19, 93974),\n",
-       " ('Banco Scotiabank', 19, 101278),\n",
-       " ('FedraBank S.A', 13, 80622)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1476,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1489,31 +1298,31 @@
    ],
    "source": [
     "%%sql\n",
+    "SELECT Faccion,banco\n",
+    "FROM \n",
+    "    (SELECT facciones.nombre AS Faccion , cuentas_bancarias.banco  ,\n",
+    "    ROW_NUMBER() OVER (PARTITION BY facciones.nombre ORDER BY COUNT(cuentas_bancarias.tipo_de_cuenta) DESC) AS rn\n",
+    "    FROM\n",
+    "        facciones\n",
     "\n",
-    "SELECT facciones.nombre , cuentas_bancarias.banco ,\n",
-    "row_number() over (partition by facciones.nombre order by COUNT(cuentas_bancarias.tipo_de_cuenta) DESC) rn\n",
-    "FROM\n",
-    "    facciones\n",
+    "    LEFT JOIN\n",
+    "        persona_pertenece_faccion\n",
+    "    ON\n",
+    "        facciones.id = persona_pertenece_faccion.id_faccion\n",
     "\n",
-    "LEFT JOIN\n",
-    "    persona_pertenece_faccion\n",
-    "ON\n",
-    "    facciones.id = persona_pertenece_faccion.id_faccion\n",
+    "    LEFT JOIN\n",
+    "        personas\n",
+    "    ON\n",
+    "        persona_pertenece_faccion.id_persona = personas.id\n",
     "\n",
-    "LEFT JOIN\n",
-    "    personas\n",
-    "ON\n",
-    "    persona_pertenece_faccion.id_persona = personas.id\n",
+    "    INNER JOIN\n",
+    "        cuentas_bancarias\n",
+    "    ON\n",
+    "        personas.id=cuentas_bancarias.id_persona\n",
+    "        \n",
+    "    GROUP BY facciones.nombre , cuentas_bancarias.banco)tabla\n",
     "\n",
-    "INNER JOIN\n",
-    "    cuentas_bancarias\n",
-    "ON\n",
-    "    personas.id=cuentas_bancarias.id_persona\n",
-    "    \n",
-    "GROUP BY facciones.nombre , cuentas_bancarias.banco\n",
-    "\n",
-    "ORDER BY rn\n",
-    "Limit 6"
+    "WHERE rn=1\n"
    ]
   },
   {
@@ -1536,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
